# ipopt_vendor

./: .dockerignore  .gitignore  Dockerfile  README.md  install.sh
.ci/: docker-compose.yml
.github/workflows/: build-and-test.yml  docker-image.yml
testing/: CMakeLists.txt  Makefile  hs071.cpp
